--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,6 +1,6 @@
 specVersion: 0.0.2
 description: Batch or categorically lookup DeFi token balanaces
-repository: https://github.com/prabhaav/defi-graph
+repository: https://github.com/valve-finance/defi-balance
 schema:
   file: ./schema.graphql
 dataSources:
@@ -30,6 +30,615 @@ dataSources:
     network: mainnet
     source:
       address: "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: USDT
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0xdac17f958d2ee523a2206206994597c13d831ec7"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: TUSD
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x0000000000085d4780b73119b644ae5ecd22b376"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: BUSD
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x4fabb145d64652a948d72533023f6e7a623c7c53"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: MKR
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x9f8f72aa9304c8b593d555f12ef6589cc3a579a2"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: COMP
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0xc00e94cb662c3520282e6f5717214004a7f26888"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: AAVE
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x7fc66500c84a76ad7e9c93437bfc5ac33e2ddae9"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: LQTY
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x6dea81c8171d0ba574754ef6f8b412f2ed88c54d"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: ALPHA
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0xa1faa113cbe53436df28ff0aee54275c13b40975"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: ALCX
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0xdbdb4d16eda451d0503b854cf79d55697f90c8df"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: UNI
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x1f9840a85d5af5bf1d1762f925bdaddc4201f984"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: CRV
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0xd533a949740bb3306d119cc777fa900ba034cd52"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: BAL
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0xba100000625a3754423978a60c9317c58a424e3d"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: SUSHI
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x6b3595068778dd592e39a122f4f5a5cf09c90fe2"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: BNT
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x1f573d6fb3f13d689ff844b4ce37794d79a7ff1c"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: LRC
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0xbbbbca6a901c926f240b89eacb641d8aec7aeafd"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: SNX
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0xc011a73ee8576fb46f5e1c5751ca3b9fe0af2a6f"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: NXM
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0xd7c49cee7e9188cca6ad8ff264c1da2e69d4cf3b"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: BOND
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x0391d2021f89dc339f60fff84546ea23e337750f"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: HEGIC
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x584bc13c7d411c00c01a62e8019472de68768430"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: FST
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x0e192d382a36de7011f795acc4391cd302003606"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: DDX
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x3a880652f47bfaa771908c07dd8673a787daed3a"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: YFI
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x0bc529c00c6401aef6d220be8c6ea1667f6ad93e"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: VSP
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x1b40183efb4dd766f11bda7a7c3ad8982e998421"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: BADGER
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x3472a5a71965499acd81997a54bba8d852c6e53d"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: REN
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x408e41876cccdc0f92210600ef50372656052a38"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: FARM
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0xa0246c9032bc3a600820415ae600c6388619a14d"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: MATIC
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x7d1afa7b718fb893db30a3abc0cfc608aacfebb0"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: TORN
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x77777feddddffc19ff86db637967013e6c6a116c"
+      abi: Token
+      startBlock: 12459563
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/mappings/token.ts
+      entities:
+        - User
+        - Asset
+      abis:
+        - name: Token
+          file: ./abis/token.json
+      eventHandlers:
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+  - name: STAKE
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      address: "0x0ae055097c6d159879521c384f1d2123d1f195e6"
       abi: Token
       startBlock: 12459563
     mapping:
