--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "graph build --ipfs https://api.staging.thegraph.com/ipfs/ ",
     "create-local": "graph create $YOUR_SUB_GRAPH --node http://127.0.0.1:8020",
     "deploy-local": "graph deploy $YOUR_SUB_GRAPH --debug --ipfs http://localhost:5001 --node http://127.0.0.1:8020/",
-    "deploy": "graph deploy $YOUR_SUB_GRAPH --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --access-token $_YOUR_GRAPH_TOKEN",
+    "deploy": "graph deploy $YOUR_SUB_GRAPH --debug --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/ --access-token $YOUR_GRAPH_ACCESS_TOKEN",
     "deploy-staging": "graph deploy --debug --ipfs https://api.staging.thegraph.com/ipfs/ --node https://api.staging.thegraph.com/deploy/ $YOUR_SUB_GRAPH",
     "prettier": "./node_modules/.bin/prettier —-write '**/*.ts'",
     "launch": "npm run codegen && npm run build && npm run deploy"
